--- a/letter.tex
+++ b/letter.tex
@@ -1,18 +1,19 @@
 \documentclass[11pt]{letter}
 
-\usepackage[color-logo]{dukecsletter}
+\usepackage[widelogo,rightalignedaddress]{dukecsletter}
 \usepackage{url}
 \usepackage{fontawesome}
-\usepackage[tt=false]{libertine}
+% \usepackage[tt=false]{libertine}
 \usepackage[colorlinks=true,allcolors=blue]{hyperref}
 \usepackage{lipsum}
 
 
 
 \name{Fan Zhang}
-\department{Dept. of Computer Science}
 \proftitle{Assistant Professor}
-\location{Duke University}
+\department{Dept. of Computer Science}
+\university{Duke University}
+\location{Durham, NC 27516}
 \zipcode{10044}
 \telephone{919-660-6564}
 \website{\url{https://fanzhang.me}}
@@ -28,11 +29,10 @@
 
 \opening{To whom this may concern,}
 
-\lipsum[3-5]
+\lipsum[3-10]
 
-Yours, \\[10mm]
-Fan Zhang \\
-\today
+Yours, \\[4em]
+Fan Zhang
 
 \end{letter}
 
